# dart_sec

./: .dev.vars.example  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
api/: [...path].js
config/: sectors.json
dart_sector_analyzer/: __init__.py  analysis.py  cli.py  downloads.py  gui.py  labels.py  models.py  opendart.py  sectors.py  xbrl.py
functions/api/: [[path]].js
functions/lib/: analysis.js  constants.js  dart.js  sectors.js  storage.js  xbrl.js
migrations/: 0001_dart_storage.sql
public/: app.js  index.html  styles.css
scripts/: check-pages-modules.mjs  dev-node-server.mjs
src/: index.js
tests/: test_analysis.py  test_downloads.py
