[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dart-sector-analyzer"
version = "0.1.0"
description = "Realtime OpenDART sector financial performance collector and analyzer"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
desktop = ["PySide6>=6.7"]

[tool.setuptools.packages.find]
include = ["dart_sector_analyzer*"]
exclude = ["public*", "functions*", "config*", "scripts*", "tests*", "node_modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
